# DIY8051

01初始化框架/: CMakeLists.txt
01初始化框架/include/: MCU8051.h  main.h
01初始化框架/src/: MCU8051.c  main.c
02基本运行流程/include/: MCU8051.h  main.h
02基本运行流程/src/: MCU8051.c  main.c
03指令的解析/: CMakeLists.txt
03指令的解析/include/: MCU8051.h
03指令的解析/src/: MCU8051.c  main.c
04解析hex文件/include/: hex.h  main.h
04解析hex文件/src/: MCU8051.c  hex.c  main.c
06内存测试1/include/: MCU8051.h  hex.h
06内存测试1/src/: MCU8051.c  hex.c  instructions.HEX  main.c
07内存测试3/include/: MCU8051.h  MCU8051_read.h  MCU8051_write.h  main.h  test_instr.h  test_memory.h
07内存测试3/src/: MCU8051.c  MCU8051_read.c  MCU8051_write.c  main.c
07内存测试3/test/: test_instr.c  test_memory.c
